fix(styles): fix spacings of tag detail

--- a/src/views/TagDetail/Followers/styles.css
+++ b/src/views/TagDetail/Followers/styles.css
@@ -3,19 +3,14 @@
 }
 
 .count {
-  @mixin flex-center-all;
+  @mixin inline-flex-center-all;
 
   padding-left: var(--spacing-x-tight);
   font-size: var(--font-size-sm);
   color: var(--color-grey-darker);
 
   & b {
-    margin-right: var(--spacing-xx-tight);
     color: var(--color-black);
-  }
-
-  & span {
-    margin-top: 2px;
   }
 }
 
