--- a/src/views/TagDetail/styles.css
+++ b/src/views/TagDetail/styles.css
@@ -8,7 +8,7 @@
 .owner {
   @mixin flex-center-start;
 
-  margin-bottom: var(--spacing-base);
+  margin-top: var(--spacing-base);
 
   & span {
     margin-left: var(--spacing-x-tight);
@@ -19,8 +19,8 @@
 }
 
 .description {
+  margin-top: var(--spacing-base);
   font-size: var(--font-size-md-s);
-  line-height: 1.33333333;
   color: var(--color-grey-darker);
   white-space: pre-wrap;
 }
@@ -28,11 +28,11 @@
 .statistics {
   @mixin flex-center-space-between;
 
-  margin-top: var(--spacing-base);
+  margin-top: var(--spacing-loose);
 }
 
 .buttons {
   @mixin flex-center-space-between;
 
-  margin-top: var(--spacing-base);
+  margin-top: var(--spacing-loose);
 }
